// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test mainEditor console test stub console test stub console.error, when execute it should add the message into the widget 1`] = `
<article
  className="wonder-console-component"
>
  <div
    className=""
  >
    <button
      className=""
      onClick={[Function]}
    >
      clear
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add log
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add info
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add warn
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add debug
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add fatal
    </button>
  </div>
  <article
    className="console-error"
  >
    <div
      className="console-header"
      onClick={[Function]}
    >
      
  Error:

  title
  error message

  description
  

  reason
  

  solution
  

  params
  

   
    </div>
  </article>
  <article
    className="console-error"
  >
    <div
      className="console-header"
      onClick={[Function]}
    >
      <span
        className=""
      >
        &gt;&gt; 
      </span>
      Trace
    at console.trace (/home/arvin/yangHao/Wonder-Editor/lib/es6_global/src/core/external/Console.js:24:5)
    at console.trace (/home/arvin/yangHao/Wonder-Editor/lib/es6_global/src/core/external/Console.js:24:5)
    at console.trace (/home/arvin/yangHao/Wonder-Editor/lib/es6_global/src/core/external/Console.js:24:5)
    at CustomConsole.console.trace (/home/arvin/yangHao/Wonder-Editor/lib/es6_global/src/core/external/Console.js:24:5)
    at Object.error (/home/arvin/yangHao/Wonder-Editor/node_modules/wonder-log/lib/es6_global/src/Log.js:111:11)
    at /home/arvin/yangHao/Wonder-Editor/lib/es6_global/test/unit/composable_component/mainEditor/composable_component/console/MainEditorConsole_test.js:41:39
    at curry_1 (/home/arvin/yangHao/Wonder-Editor/node_modules/bs-platform/lib/es6/curry.js:36:16)
    at Object._1 (/home/arvin/yangHao/Wonder-Editor/node_modules/bs-platform/lib/es6/curry.js:71:12)
    at Object.&lt;anonymous&gt; (/home/arvin/yangHao/Wonder-Editor/node_modules/wonder-bs-jest/lib/es6_global/src/wonder_jest.js:196:19)
    at Object.asyncFn (/home/arvin/yangHao/Wonder-Editor/node_modules/wonder-jest-jasmine2/build/jasmine_async.js:124:345)
    </div>
  </article>
</article>
`;

exports[`test mainEditor console test stub console test stub console.info, when execute it should add the message into the widget 1`] = `
<article
  className="wonder-console-component"
>
  <div
    className=""
  >
    <button
      className=""
      onClick={[Function]}
    >
      clear
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add log
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add info
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add warn
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add debug
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add fatal
    </button>
  </div>
  <article
    className="console-info"
  >
    <div
      className="console-header"
      onClick={[Function]}
    >
      Info: info message
    </div>
  </article>
</article>
`;

exports[`test mainEditor console test stub console test stub console.log, when execute it should add the message into the widget 1`] = `
<article
  className="wonder-console-component"
>
  <div
    className=""
  >
    <button
      className=""
      onClick={[Function]}
    >
      clear
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add log
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add info
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add warn
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add debug
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add fatal
    </button>
  </div>
  <article
    className="console-log"
  >
    <div
      className="console-header"
      onClick={[Function]}
    >
      log message
    </div>
  </article>
</article>
`;

exports[`test mainEditor console test stub console test stub console.trace, when execute it should add the message into the last consoleMessage record 1`] = `
<article
  className="wonder-console-component"
>
  <div
    className=""
  >
    <button
      className=""
      onClick={[Function]}
    >
      clear
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add log
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add info
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add warn
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add debug
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add fatal
    </button>
  </div>
  <article
    className="console-log"
  >
    <div
      className="console-header"
      onClick={[Function]}
    >
      
  Debug:

  description
  debug message

  params
  

  
    </div>
  </article>
  <article
    className="console-error"
  >
    <div
      className="console-header"
      onClick={[Function]}
    >
      <span
        className=""
      >
        &gt;&gt; 
      </span>
      Trace
    at console.trace (/home/arvin/yangHao/Wonder-Editor/lib/es6_global/src/core/external/Console.js:24:5)
    at console.trace (/home/arvin/yangHao/Wonder-Editor/lib/es6_global/src/core/external/Console.js:24:5)
    at console.trace (/home/arvin/yangHao/Wonder-Editor/lib/es6_global/src/core/external/Console.js:24:5)
    at console.trace (/home/arvin/yangHao/Wonder-Editor/lib/es6_global/src/core/external/Console.js:24:5)
    at CustomConsole.console.trace (/home/arvin/yangHao/Wonder-Editor/lib/es6_global/src/core/external/Console.js:24:5)
    at Object.debug (/home/arvin/yangHao/Wonder-Editor/node_modules/wonder-log/lib/es6_global/src/Log.js:75:13)
    at /home/arvin/yangHao/Wonder-Editor/lib/es6_global/test/unit/composable_component/mainEditor/composable_component/console/MainEditorConsole_test.js:48:39
    at curry_1 (/home/arvin/yangHao/Wonder-Editor/node_modules/bs-platform/lib/es6/curry.js:36:16)
    at Object._1 (/home/arvin/yangHao/Wonder-Editor/node_modules/bs-platform/lib/es6/curry.js:71:12)
    at Object.&lt;anonymous&gt; (/home/arvin/yangHao/Wonder-Editor/node_modules/wonder-bs-jest/lib/es6_global/src/wonder_jest.js:196:19)
    </div>
  </article>
</article>
`;

exports[`test mainEditor console test stub console test stub console.warn, when execute it should add the message into the widget 1`] = `
<article
  className="wonder-console-component"
>
  <div
    className=""
  >
    <button
      className=""
      onClick={[Function]}
    >
      clear
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add log
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add info
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add warn
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add debug
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      add fatal
    </button>
  </div>
  <article
    className="console-warn"
  >
    <div
      className="console-header"
      onClick={[Function]}
    >
      Warn: warn message
    </div>
  </article>
</article>
`;
